[tool.poetry]
name = "cookiecutter_python_package"
version = "0.1.0"
description = "A Python Package CookieCutter Template"
authors = ["Aubrey Taylor"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.6 || ~3.7 || ~3.8"

[tool.poetry.dev-dependencies]
cookiecutter = "^1.7.2"
black = "^20.8b1"
pytest-cookies = "^0.5.1"
pdbpp = "^0.10.2"
pydocstyle = "^5.1.1"
click = "^7.1.2"
klak = "^0.4.3"

[tool.black]
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
